force-app/main/default/objects/Training_Track__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>Short Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Training Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Tracks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>